--- a/kino.css
+++ b/kino.css
@@ -1,6 +1,6 @@
 ﻿body {
     font: 16px Arial, Calibri;
-    background-image: url("http://cdn26.us1.fansshare.com/photo/backgroundhd/dark-background-hd-wallpaper-your-wallpaper-dark-background-pictures-yourdark-pattern-backgrounds-forest-cool-blue-design-abstract-hd-your-1535197346.jpg");
+    background-image: url("bg.jpg");
     background-size: 1920px 1080px;
     position: absolute;
     overflow-x: hidden;
